--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,11 @@
         "php": "^8.0",
         "symfony/http-foundation": "^5.0|^6.0",
         "illuminate/console": "^7.0|^8.0|^9.0",
-        "illuminate/pagination": "^7.0|^8.0|^9.0"
+        "illuminate/pagination": "^7.0|^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "orchestra/testbench": "^5.0|^6.0|^7.0",
-        "phpunit/phpunit": "^9.3",
+        "phpunit/phpunit": "^10.0",
         "symfony/var-dumper": "^6.0"
     },
     "extra": {
