--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": "^8.0",
         "symfony/http-foundation": "^5.0|^6.0",
-        "illuminate/console": "^7.0|^8.0|^9.0",
+        "illuminate/console": "^7.0|^8.0|^9.0|^10.0",
         "illuminate/pagination": "^7.0|^8.0|^9.0|^10.0"
     },
     "require-dev": {
